--- a/bootstrap.css
+++ b/bootstrap.css
@@ -37,5 +37,32 @@ body {
 .page-header{
     color: #4aaaa5;
     border-bottom: 2px solid #dddddd;
+    margin-bottom: 10px;
 }
+.project-name {
+    background-color: #4aaaa5;
+    color: #ffffff;
+    text-align: center; 
+    position: absolute;
+    bottom: 10%;
+    height: 20%;
+    width: 88%; 
+}
+ 
+ .project-container {
+     position: relative;
+     margin-left: 5p
+ }
+    
+    
+    
+.project-pic{
+     
+    width: 100%;
+    background-color: #ffffff;
+    height:100%;
 
+}
+.row{
+    margin-bottom: 5%;
+}
