--- a/bootstrap.css
+++ b/bootstrap.css
@@ -1,68 +1,76 @@
 body {
     background-image: url("assets/images/memphis-mini.png");
+    padding-top:80px;
 }
+
 .navbar {
-    height:80px;
+    height: 80px;
     background-color: #ffffff;
 }
- .navbar-brand {
+
+.navbar-brand {
     background-color: #4aaaa5;
     width: 20%;
     height: 100%;
-    /* position: absolute;
+    position: absolute;
     bottom: 0;
-    left: 10%; */
+    left: 10%;
     color: #ffffff!important;
     font-family: font-family 'Georgia', Times, Times New Roman, serif;
     text-align: center;
+    padding: 20px;
 }
-/*.navbar-nav {
+
+.navbar-nav {
     color: #cccccc;
-    /* position: absolute;
-    bottom: 0;
-    right: 0; 
-    
-    /* margin-right: 200px; 
-    
 }
+
 .nav-item {
     margin: 0 10px;
     padding-left: 10px;
     border-left: 2px solid #cccccc;
     color: #cccccc;
-} */
-.btn-info{
+}
+
+.btn-info {
     background-color: #4aaaa5!important;
 }
-.page-header{
+
+.page-header {
     color: #4aaaa5;
     border-bottom: 2px solid #dddddd;
     margin-bottom: 10px;
 }
+
 .project-name {
     background-color: #4aaaa5;
     color: #ffffff;
-    text-align: center; 
+    text-align: center;
     position: absolute;
     bottom: 10%;
     height: 20%;
-    width: 88%; 
+    width: 88%;
 }
- 
- .project-container {
-     position: relative;
-     margin-left: 5p
- }
-    
-    
-    
-.project-pic{
-     
+
+.project-container {
+    position: relative;
+    margin-left: 5p
+}
+
+.fixed-bottom {
+    color: #ffffff;
+    border-top: 10px solid #4aaaa5;
+    background-color: #666666;
+    height: 50px; 
+    text-align: center;
+}
+
+.project-pic {
     width: 100%;
     background-color: #ffffff;
-    height:100%;
-
+    height: 100%;
 }
-.row{
+
+.row {
     margin-bottom: 5%;
 }
