--- a/bootstrap.css
+++ b/bootstrap.css
@@ -2,50 +2,19 @@
     background-image: url("assets/images/memphis-mini.png");
     padding-top: 80px;
 }
-
-/* .navbar {
-    height: 80px;
-    background-color: #ffffff;
-}
-
-.navbar-brand {
-    background-color: #4aaaa5;
-    width: 20%;
-    height: 100%;
-    position: absolute;
-    bottom: 0;
-    left: 10%;
-    color: #ffffff!important;
-    font-family: font-family 'Georgia', Times, Times New Roman, serif;
-    text-align: center;
-    padding: 20px;
-}
-
-.navbar-nav {
-    color: #cccccc;
-}
-
-.nav-item {
-    margin: 0 10px;
-    padding-left: 10px;
-    border-left: 2px solid #cccccc;
-    color: #cccccc;
-} */
 .navbar{
-    background-color: #dddddd;
-    color: #4aaaa5;
-}
+    background-color: #ffffff;
 
+}
+.navbar-brand{
+    background-color: #4aaaa5;
+    color: #ffffff!important;
+    height:100%;
+    width: 150px;
+}
 .btn-info {
     background-color: #4aaaa5!important;
 }
-
-.page-header {
-    color: #4aaaa5;
-    border-bottom: 2px solid #dddddd;
-    margin-bottom: 10px;
-}
-
 .project-name {
     background-color: #4aaaa5;
     color: #ffffff;
@@ -79,3 +48,18 @@
     margin-bottom: 5%;
 }
 
+.nav-item{
+    padding-left: 5px;
+    border-left: 2px solid #cccccc;
+
+}
+.page-header{
+    color: #4aaaa5;
+    border-bottom: 2px solid #dddddd;
+    padding-bottom: 10px;
+}
+.paragraph-text{
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+    height: 250px;
+}
