--- a/bootstrap.css
+++ b/bootstrap.css
@@ -16,8 +16,7 @@
     background-color: #4aaaa5!important;
 }
 .project-name {
-    background-color: #4aaaa5;
-    color: #ffffff;
+    /* color: #ffffff; */
     text-align: center;
     position: absolute;
     bottom: 10%;
